--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 });
             }
         });
+        window.parent.postMessage("iframe-ready", "*");
     </script>
 </body>
 </html>
